<resources>
    <string name="app_name"></string>
    <string name="default_web_client_id" />
    <string name="b">B</string>
    <string name="c">C</string>
    <string name="d">D</string>
    <string name="next">NEXT</string>
    <string name="a">A</string>
    <string name="what_is_your_name">what is your name</string>
    <string name="login">Login</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register_here">Register Here</string>
    <string name="or">or</string>
    <string name="not_registered_yet">Not registered yet?</string>
    <string name="test_your_wits">Test Your Wits!</string>
    <string name="start_quiz">Start Quiz</string>
    <string name="already_registered">Already Registered</string>
    <string name="login_here">Login Here</string>
    <string name="register">Register</string>
    <string name="logout">LogOut</string>
    <string name="restart_quiz">Restart Quiz</string>
    <string name="_5_20">5/20</string>
    <string name="opps_time_out">Opps Time Out..</string>
</resources>