<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#131835"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <TextView
        android:id="@+id/textView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="80dp"
        android:gravity="center"
        android:text="Register"
        android:textColor="@color/white"
        android:textSize="50sp" />

    <EditText
        android:id="@+id/Email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="50dp"
        android:layout_marginRight="30dp"
        android:hint="Email"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="26sp" />

    <EditText
        android:id="@+id/Password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginTop="30dp"
        android:layout_marginRight="30dp"
        android:hint="Password"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textSize="26sp" />


    <ProgressBar
        android:id="@+id/progress"
        android:layout_width="70dp"
        android:layout_height="56dp"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/Register"
        android:layout_width="200dp"
        android:layout_height="58dp"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"
        android:background="@drawable/btn_style"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="25sp" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp">

        <TextView
            android:layout_width="211dp"
            android:layout_height="40dp"
            android:layout_marginStart="30dp"
            android:text="@string/already_registered"
            android:textColor="#8897A3"
            android:textSize="22sp" />

        <TextView
            android:id="@+id/LoginHere"
            android:layout_width="171dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="-17dp"
            android:text="@string/login_here"
            android:textColor="@color/white"
            android:textSize="35sp" />
    </LinearLayout>


</LinearLayout>